--- a/day3/solution.ipynb
+++ b/day3/solution.ipynb
@@ -83,32 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "353678\n",
-      "2356\n",
-      "16641\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "372675"
+       "86841457"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sum = 0\n",
-    "file = open(\"input_small.txt\").read().strip().split(\"\\n\")\n",
+    "file = open(\"input.txt\").read().strip().split(\"\\n\")\n",
     "\n",
     "def has_two_number(x, y, file):\n",
     "    number_list = []\n",
@@ -117,6 +108,10 @@
     "            try:\n",
     "                if file[i][j].isdigit():\n",
     "                    number_list.append(get_number(i, j, file))\n",
+    "                    if j == y-1 and file[i][y].isdigit():\n",
+    "                        break\n",
+    "                    if j == y:\n",
+    "                        break\n",
     "            except IndexError:\n",
     "                continue\n",
     "    i = x\n",
@@ -127,9 +122,6 @@
     "        except IndexError:\n",
     "            continue\n",
     "    if len(number_list) == 2:\n",
-    "        print(\"-------------\")\n",
-    "        print(number_list[0])\n",
-    "        print(number_list[1])\n",
     "        return number_list[0] * number_list[1]\n",
     "    return 0\n",
     "\n",
