--- a/day5/solution.ipynb
+++ b/day5/solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "662197086"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,11 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = open(\"input_small.txt\").read().strip().split(\"\\n\")\n",
+    "file = open(\"input.txt\").read().strip().split(\"\\n\")\n",
     "\n",
     "data = {\"seed-to-soil\": ([], False), \"soil-to-fertilizer\": ([], False), \"fertilizer-to-water\": ([], False),\n",
     "        \"water-to-light\": ([], False), \"light-to-temperature\": ([], False), \"temperature-to-humidity\": ([], False),\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,40 +129,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(79, 14), (55, 13)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(seeds_range)"
+    "def append_non_transformed(transformed_list, dest, source_start, source_end):\n",
+    "    if len(transformed_list) == 0:\n",
+    "        dest.append((source_start, source_end - source_start + 1))\n",
+    "        return dest\n",
+    "\n",
+    "    range_transformed = [(transformed_list[i], transformed_list[i + 1]) for i in range(0, len(transformed_list), 2)]\n",
+    "\n",
+    "    non_transformed = []\n",
+    "    tmp_range_start = None\n",
+    "    end_prev = -1\n",
+    "\n",
+    "    for i, value in enumerate(range_transformed):\n",
+    "        if i == 0 and not value[0] == source_start:\n",
+    "            non_transformed.append((source_start, value[0] - source_start))\n",
+    "        if value[0] - end_prev != 1 and i != 0:\n",
+    "            tmp_range_start = end_prev + 1\n",
+    "            non_transformed.append((tmp_range_start, value[0] - tmp_range_start + 1))\n",
+    "            tmp_range_start = None\n",
+    "        end_prev = value[1]\n",
+    "    \n",
+    "    if range_transformed[-1][1] != source_end:\n",
+    "        non_transformed.append((range_transformed[-1][1] + 1, source_end - range_transformed[-1][1]))\n",
+    "    \n",
+    "    for i in non_transformed:\n",
+    "        dest.append(i)\n",
+    "\n",
+    "    return dest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "35"
+       "52510809"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,35 +182,48 @@
     "def get_transform(source, map):\n",
     "    dest = []\n",
     "    for j in source:\n",
-    "        range_start = j[0]\n",
-    "        range_end = j[0] + j[1]\n",
-    "        has_changes = False\n",
+    "        tmp_dest = []\n",
+    "        source_start = j[0]\n",
+    "        source_end = j[0] + j[1] - 1\n",
+    "        transformed_list = []\n",
     "        for i in map:\n",
+    "            source_range_start = int(i[1])\n",
+    "            source_range_end = int(i[1]) + int(i[2]) - 1\n",
+    "            dest_range_start = int(i[0])\n",
+    "            dest_range_end = int(i[0])+ int(i[2]) - 1\n",
     "            start_in = False\n",
     "            end_in = False\n",
-    "            if int(i[1]) < range_start < int(i[1]) + int(i[2]):\n",
-    "                new_range_start = int(i[0]) + (range_start - int(i[1]))\n",
+    "            if source_range_start <= source_start <= source_range_end:\n",
+    "                new_start = source_start - (source_range_start - dest_range_start)\n",
     "                start_in = True\n",
-    "                has_changes = True\n",
-    "            if int(i[1]) < range_end < int(i[1]) + int(i[2]):\n",
-    "                new_range_end = int(i[0]) + (range_start - int(i[1]))\n",
+    "                transformed_list.append(source_start)\n",
+    "            if source_range_start <= source_end <= source_range_end:\n",
+    "                new_end = source_end - (source_range_start - dest_range_start)\n",
     "                end_in = True\n",
-    "                has_changes = True\n",
+    "                transformed_list.append(source_end)\n",
     "            if start_in and not end_in:\n",
-    "                new_range_end = new_range_start + int(i[1]) + int(i[2]) - range_start\n",
-    "                has_changes = True\n",
+    "                new_end = dest_range_end\n",
+    "                tmp_dest.append((new_start, new_end - new_start + 1))\n",
+    "                transformed_list.append(source_range_end)\n",
     "            if end_in and not start_in:\n",
-    "                new_range_start = new_range_end - range_end - int(i[1])\n",
-    "                has_changes = True\n",
-    "        if not has_changes:\n",
-    "            new_range_start = range_start\n",
-    "            new_range_end = range_end\n",
-    "        dest.append((new_range_start, new_range_end - new_range_start))\n",
-    "        else:\n",
-    "            dest.append(int(j))\n",
+    "                new_start = dest_range_start\n",
+    "                tmp_dest.append((new_start, new_end - new_start + 1))\n",
+    "                transformed_list.append(source_range_start)\n",
+    "            if start_in and end_in:\n",
+    "                tmp_dest.append((new_start, new_end - new_start + 1))\n",
+    "            if source_start < source_range_start and source_range_end < source_end:\n",
+    "                new_start = dest_range_start\n",
+    "                new_end = dest_range_end\n",
+    "                transformed_list.append(source_range_start)\n",
+    "                transformed_list.append(source_range_end)\n",
+    "                tmp_dest.append((new_start, new_end - new_start + 1))\n",
+    "        \n",
+    "        transformed_list = sorted(transformed_list)\n",
+    "        tmp_dest = append_non_transformed(transformed_list, tmp_dest, source_start, source_end)\n",
+    "        dest = dest + tmp_dest\n",
     "    return dest\n",
     "\n",
-    "soil = get_transform(seeds, data[\"seed-to-soil\"])\n",
+    "soil = get_transform(seeds_range, data[\"seed-to-soil\"])\n",
     "fertilizer = get_transform(soil, data[\"soil-to-fertilizer\"])\n",
     "water = get_transform(fertilizer, data[\"fertilizer-to-water\"])\n",
     "light = get_transform(water, data[\"water-to-light\"])\n",
@@ -207,7 +231,10 @@
     "humidity = get_transform(temperature, data[\"temperature-to-humidity\"])\n",
     "location = get_transform(humidity, data[\"humidity-to-location\"])\n",
     "\n",
-    "min(location)"
+    "locations = []\n",
+    "for i in location:\n",
+    "    locations.append(i[0])\n",
+    "min(locations)"
    ]
   }
  ],
