--- a/day8/solution.ipynb
+++ b/day8/solution.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'AAA': ['BBB', 'BBB'], 'BBB': ['AAA', 'ZZZ'], 'ZZZ': ['ZZZ', 'ZZZ']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file = open(\"input_small.txt\").read().strip().split(\"\\n\")\n",
     "directions = file.pop(0)\n",
@@ -33,13 +25,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "current_pos = \n",
-    "for direction in directions:\n",
-    "    if direction == \"L\":\n"
+    "current_pos = \"AAA\"\n",
+    "count = 0\n",
+    "\n",
+    "while True:\n",
+    "    for direction in directions:\n",
+    "        count += 1\n",
+    "        if direction == \"L\":\n",
+    "            current_pos = map[current_pos][0]\n",
+    "        else:\n",
+    "            current_pos = map[current_pos][1]\n",
+    "        if current_pos == \"ZZZ\":\n",
+    "            break\n",
+    "    if current_pos == \"ZZZ\":\n",
+    "            break\n",
+    "count"
    ]
   }
  ],
@@ -59,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
